--- a/resume.html
+++ b/resume.html
@@ -22,9 +22,10 @@
         <link rel="preload" href="/src/thirdparty/tailwind.js" as="script">
         <script src="/src/thirdparty/tailwind.js"></script>
         <script>tailwind.config={theme:{extend:{colors:{"brown":"#494327","brown-darker":"#030302","brown-dark":"#0a0a08","brown-light":"#766a37","brown-accent":"#968613"}}}}</script>
-        <style>@font-face{font-family:"Nunito";src:url("./src/nunito.ttf")format("truetype");}html,body{font-family:"Nunito";}::-webkit-scrollbar{width:0px;height:0px;}::-webkit-scrollbar-track{background:transparent;}::-webkit-scrollbar-thumb{background:transparent;}.ripple{position:absolute;background:rgba(92, 83, 19, 0.8)!important;border-radius:50%;transform:scale(0);animation:ripple 600ms linear;z-index: -1;}@keyframes ripple{to{transform:scale(4);opacity:0;}}</style>
+        <style>@font-face{font-family:"Nunito";src:url("./src/nunito.ttf")format("truetype");}html,body{font-family:"Nunito";}::-webkit-scrollbar{width:0px;height:0px;}::-webkit-scrollbar-track{background:transparent;}::-webkit-scrollbar-thumb{background:transparent;}.ripple{position:absolute;background:rgba(92, 83, 19, 0.8)!important;border-radius:50%;transform:scale(0);animation:ripple 600ms linear;z-index: -1;}@keyframes ripple{to{transform:scale(4);opacity:0;}}.gradient-cursor {width: 5000px;height: 5000px;background: radial-gradient(circle, rgba(150, 135, 19, 0.024), rgba(118, 108, 55, 0.382));pointer-events: none;border-radius: 50%;transform: translate(-50%, -50%);filter: blur(10000px);}</style>
     </head>
     <body class="relative min-h-screen box-border bg-brown-dark text-zinc-300">
+        <div gradient-cursor class="invisible sm:visible fixed gradient-cursor"></div>
         <div class="h-[100vh]">
             <div class="flex flex-row-reverse h-full w-full">
                 <div sidemenu class="flex-shrink-0 overflow-x-hidden bg-brown-darker z-50 invisible" style="width: 0px;">
@@ -64,7 +65,7 @@
                     </div>
                 </div>
                 <div class="flex h-full max-w-full flex-1 flex-col">
-                    <div navigator class="flex flex-row justify-between items-center py-3 z-10 px-4">
+                    <div navigator class="flex flex-row justify-between items-center py-3 z-10 px-4 transition">
                         <div class="relative overflow-hidden flex flex-2 items-center rounded-full">
                             <a ripple class="cursor-pointer p-1 transition rounded-full hover:bg-brown-light hover:bg-opacity-20" goto="https://github.com/wo-r?tab=repositories">
                                 <img class="h-8 rounded-full shadow-xl pointer-events-none" src="https://avatars.githubusercontent.com/u/78428114"/>
@@ -87,8 +88,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="py-3 z-10 px-4 container mx-auto">
-                        <div class="flex flex-col justify-center items-center h-[80vh]">
+                    <div class="py-3 z-10 px-4 container mx-auto overflow-x-scroll">
+                        <div class="flex flex-col justify-center items-center mt-16">
                             <div class="flex flex-col sm:flex-row w-full">
                                 <div class="flex flex-col flex-1">
                                     <h1 class="font-black text-5xl sm:text-7xl">Heya,<br>I'm Braden,<br>a self taught programmer.</h1>
@@ -98,12 +99,16 @@
                                         <button goto="#" ripple class="flex flex-1 justify-center relative overflow-hidden z-20 py-4 px-3 bg-black bg-opacity-25 font-bold hover:bg-brown-light hover:bg-opacity-20 transition rounded-lg">Contact Me</button>
                                     </div>
                                 </div>
-                                <div class="flex flex-1">
-                                    <div class="flex flex-col justify-center items-center w-full">
-                                        <!--TODO: what should be here hmmmm-->
+                                <div class="hidden flex-1 lg:flex">
+                                    <div class="flex flex-col justify-center items-end w-full">
+                                        <img class="rounded-2xl shadow-lg transition tilt" src="/src/logo/logo-full.jpg">
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="flex flex-col justify-center mt-[40vh]">
+
+                            
                         </div>
                     </div>
                 </div>
